fixed cart bug on mobile devise

--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -202,11 +202,10 @@
   .overlay {
     width: 100vw;
     height: 100vh;
-    overflow-y: hidden;
   }
 
   .cart {
-    overflow-y: hidden;
     width: 100vw;
+    padding-bottom: 100px;
   }
 }
